# TSM_SoftEng_cicd_for_embedded_alban

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  readme.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: README.md
.github/workflows/: deploy.yml
src/: CMakeLists.txt  FreeRTOShooks.c  IncludeMcuLibConfig.h  MinIniKeys.h  PicoWiFi.c  PicoWiFi.h  RNet_App.c  RNet_App.h  RNet_AppConfig.h  application.c  application.h  blinky.c  blinky.h  buttons.c  buttons.h  buttons_config.h  debounce.c  debounce.h  dns_resolver.c  dns_resolver.h  leds.c  leds_config.h  main.c  mqtt.c  mqtt_client.c  mqtt_client.h  ntp_client.c  ntp_client.h  nvmc.c  nvmc.h  oled.c  oled.h  platform.c  platform.h  rs485.c  rs485.h  sensor.c  sensor.h  shell.c  shell.h  (+6 more)
src/tests/: CMakeLists.txt  test_dns_resolver.c  test_dns_resolver.h  test_sensor.c  test_sensor.h  tests.c  tests.h
